--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,12 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
   </head>
 
   <body>
-
+    <div id="app">
     <!-- Navigation -->
     <div class="navbar bg-dark fixed-top">
       <div class="container">
@@ -34,6 +35,7 @@
       <div class="row">
         <div class="col-lg-3">
           <h4>Add new Event</h4>
+          {{message}}
           <div class="list-group">
             <form>
               <div class="form-group">
@@ -157,7 +159,16 @@
       </div>
       <!-- /.container -->
     </footer>
+    </div>
+    <script>
 
+        var app = new Vue({
+            el: '#app',
+            data: {
+                message: 'testing'
+            }
+        })
+    </script>
   </body>
 
 </html>
