--- a/client/index.html
+++ b/client/index.html
@@ -175,7 +175,7 @@
                     if (this.loginSeen === true) {
                         this.loginSeen = false
                     }
-                    else (this.loginSeen === false) {
+                    else if (this.loginSeen === false) {
                         this.loginSeen = true
                     }
                 }
